[metadata]
name = async_factory_boy
version = 1.0.1
description = factory_boy extension with asynchronous ORM support
long_description = file: README.rst
author = Kacper Kuźniarski
url = https://github.com/kuzxnia/async_factory_boy
keywords = factory_boy, factory, fixtures, async, SQLAlchemy, Tortoise, async_factory_boy 
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:
python_requires = >=3.7
install_requires = factory-boy >=3.0.0
[options.extras_require]
dev =
    coverage
    flake8
    isort
    SQLAlchemy
    tortoise-orm >= 0.18.1
    wheel>=0.32.0
    tox
    zest.releaser[recommended]
[bdist_wheel]
universal = 1
[zest.releaser]
; semver-style versions
version-levels = 3
[distutils]
index-servers = pypi
[flake8]
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,venv,.eggs,build
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203, E501, W503
[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
